fixed some styling so forms didt overlap the containers

--- a/frontend/src/styles/_goal_show.scss
+++ b/frontend/src/styles/_goal_show.scss
@@ -218,3 +218,12 @@
     justify-content: center;
     align-items: center;
 }
+
+#goal_show_left{
+    margin-right: 110px;
+}
+
+#goal_show_right{
+    margin-left: 110px;
+    min-width: 360px;
+}
